# OpenSourceLedger

./: .gitignore  .gitmodules  CMakeLists.txt  OSL Sovereign SDK.odt  README.md  setup_osl.sh
ops/docker/: Dockerfile.core  default.conf  docker-compose.yml  nginx.conf
ops/docker/auth/config/: configuration.yml  db.sqlite3  users_database.yml
ops/docker/auth/glauth/: glauth.conf
ops/gentoo/: osl-stack.initd
ops/sql/: init_schema.sql
schema/: init.sql
src/core/: CMakeLists.txt  ViewEngine.cpp  ViewEngine.hpp  crypto.cpp  crypto.hpp  ledger.cpp  main.cpp  main.cpp.bak
src/plugins/interface/: PluginManager.cpp  PluginManager.hpp  osl_plugin.hpp
src/web/: index.html  login.html
src/web/css/: osl-style.css
src/web/js/: osl-app.js
